# cashback

./: .dockerignore  .env  .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
cashback/: main.py
cashback/entities/: constants.py  dealer.py  purchase.py
cashback/routers/v1/: auth.py  dealer.py  purchase.py
cashback/usecases/: cashback.py
src/: log_config.py  main.py  settings.py
src/api/v1/: auth.py  cashback.py  purchase.py
src/controller/http/v1/: auth.py
src/entities/: dealer.py  purchase.py
src/infra/: database.py
src/infra/boticario/: client.py  exceptions.py
src/infra/database/: client.py  connection.py  exceptions.py  modelbase.py
src/models/: auth.py  base.py  purchase.py  reseller.py
src/repositories/: purchase.py  reseller.py
src/routers/v1/: cashback.py  dealer.py  purchase.py
src/routes/v1/: auth.py  cashback.py  purchase.py  reseller.py
src/schemas/: cashback.py  constant.py  purchase.py  reseller.py
src/usecases/: auth.py  cashback.py  purchase.py  reseller.py
src/utils/: exception_handlers.py
tests/: test_precommit.py
